Kotlin 1.5.30 and use KSP for autoservice
So tired of kapt oh my god